--- a/public/css/app.css
+++ b/public/css/app.css
@@ -598,12 +598,6 @@ video {
 .z-50 {
   z-index: 50;
 }
-.col-span-7 {
-  grid-column: span 7 / span 7;
-}
-.row-span-3 {
-  grid-row: span 3 / span 3;
-}
 .float-right {
   float: right;
 }
@@ -628,6 +622,9 @@ video {
 }
 .-mt-1 {
   margin-top: -0.25rem;
+}
+.-mt-2 {
+  margin-top: -0.5rem;
 }
 .-mt-px {
   margin-top: -1px;
@@ -728,9 +725,6 @@ video {
 .mt-\[4px\] {
   margin-top: 4px;
 }
-.-mt-2 {
-  margin-top: -0.5rem;
-}
 .box-border {
   box-sizing: border-box;
 }
@@ -784,6 +778,9 @@ video {
 }
 .h-9 {
   height: 2.25rem;
+}
+.h-\[300px\] {
+  height: 300px;
 }
 .h-\[528px\] {
   height: 528px;
@@ -863,30 +860,6 @@ video {
 .max-w-xl {
   max-width: 36rem;
 }
-.max-w-xs {
-  max-width: 20rem;
-}
-.max-w-\[150px\] {
-  max-width: 150px;
-}
-.max-w-\[260px\] {
-  max-width: 260px;
-}
-.max-w-\[270px\] {
-  max-width: 270px;
-}
-.max-w-\[290px\] {
-  max-width: 290px;
-}
-.max-w-\[300px\] {
-  max-width: 300px;
-}
-.max-w-\[320px\] {
-  max-width: 320px;
-}
-.max-w-\[340px\] {
-  max-width: 340px;
-}
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -950,14 +923,8 @@ video {
      -moz-appearance: none;
           appearance: none;
 }
-.grid-flow-col {
-  grid-auto-flow: column;
-}
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-.grid-rows-3 {
-  grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -1186,10 +1153,6 @@ video {
 .bg-\[\#f2f2f2\] {
   --tw-bg-opacity: 1;
   background-color: rgb(242 242 242 / var(--tw-bg-opacity));
-}
-.bg-disabled {
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
 }
 .bg-gray-100 {
   --tw-bg-opacity: 1;
@@ -2941,6 +2904,10 @@ input:checked ~ .line {
     display: block;
   }
 
+  .lg\:inline {
+    display: inline;
+  }
+
   .lg\:flex {
     display: flex;
   }
@@ -2975,6 +2942,10 @@ input:checked ~ .line {
 
   .lg\:justify-normal {
     justify-content: normal;
+  }
+
+  .lg\:justify-between {
+    justify-content: space-between;
   }
 
   .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
