--- a/public/css/app.css
+++ b/public/css/app.css
@@ -568,6 +568,9 @@ video {
 .right-0 {
   right: 0px;
 }
+.right-16 {
+  right: 4rem;
+}
 .right-2 {
   right: 0.5rem;
 }
@@ -622,6 +625,9 @@ video {
 }
 .-mt-1 {
   margin-top: -0.25rem;
+}
+.-mt-2 {
+  margin-top: -0.5rem;
 }
 .-mt-px {
   margin-top: -1px;
@@ -2911,16 +2917,8 @@ input:checked ~ .line {
     width: 24rem;
   }
 
-  .lg\:w-\[20rem\] {
-    width: 20rem;
-  }
-
   .lg\:w-\[40rem\] {
     width: 40rem;
-  }
-
-  .lg\:w-auto {
-    width: auto;
   }
 
   .lg\:max-w-xl {
