--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -44,7 +44,7 @@
         @apply w-full box-border h-screen bg-theme-pages drop-shadow-md overflow-auto;
     }
     .head-pages {
-        @apply p-5;
+        @apply p-5 w-full;
     }
     .body-pages {
         @apply p-5;
