--- a/public/css/app.css
+++ b/public/css/app.css
@@ -671,6 +671,9 @@ video {
 .mr-3 {
   margin-right: 0.75rem;
 }
+.mr-5 {
+  margin-right: 1.25rem;
+}
 .-mt-2 {
   margin-top: -0.5rem;
 }
@@ -893,10 +896,6 @@ video {
 }
 .translate-y-4 {
   --tw-translate-y: 1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.rotate-180 {
-  --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-100 {
@@ -1214,6 +1213,9 @@ video {
 .bg-theme-primary\/10 {
   background-color: rgb(220 53 69 / 0.1);
 }
+.bg-theme-primary\/5 {
+  background-color: rgb(220 53 69 / 0.05);
+}
 .bg-theme-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(18 44 79 / var(--tw-bg-opacity));
@@ -1221,6 +1223,26 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-\[\#fbe9eb\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 233 235 / var(--tw-bg-opacity));
+}
+.bg-\[\#fffafa\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 250 250 / var(--tw-bg-opacity));
+}
+.bg-\[\#f6eded\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 237 237 / var(--tw-bg-opacity));
+}
+.bg-\[\#f5f5f5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+.bg-\[\#fffefe\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 254 254 / var(--tw-bg-opacity));
 }
 .fill-current {
   fill: currentColor;
@@ -1797,6 +1819,7 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .head-pages {
+  width: 100%;
   padding: 1.25rem;
 }
 .body-pages {
@@ -1964,6 +1987,19 @@ body {
 }
 .table-dictionary td {
   text-align: left;
+}
+.table-collapse {
+  width: 100%;
+  border-collapse: collapse;
+  border-width: 1px;
+}
+.table-collapse th,
+    td {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  text-align: center;
 }
 table {
   border-collapse: collapse;
@@ -2324,6 +2360,10 @@ input:checked ~ .line {
 }
 .hover\:bg-white\/20:hover {
   background-color: rgb(255 255 255 / 0.2);
+}
+.hover\:bg-slate-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
 .hover\:text-gray-400:hover {
   --tw-text-opacity: 1;
@@ -2921,6 +2961,10 @@ input:checked ~ .line {
     display: block;
   }
 
+  .lg\:inline {
+    display: inline;
+  }
+
   .lg\:flex {
     display: flex;
   }
@@ -2951,6 +2995,10 @@ input:checked ~ .line {
 
   .lg\:justify-normal {
     justify-content: normal;
+  }
+
+  .lg\:justify-between {
+    justify-content: space-between;
   }
 
   .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
