--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -195,6 +195,13 @@
 input {
     outline: none !important;
 }
+select {
+    outline: none !important;
+}
+textarea {
+    outline: none !important;
+}
+
 .select2.select2-container {
     width: 100% !important;
 }
