--- a/public/css/app.css
+++ b/public/css/app.css
@@ -580,9 +580,6 @@ video {
 .right-60 {
   right: 15rem;
 }
-.top-0 {
-  top: 0px;
-}
 .top-10 {
   top: 2.5rem;
 }
@@ -629,9 +626,6 @@ video {
 .-mt-2 {
   margin-top: -0.5rem;
 }
-.-mt-px {
-  margin-top: -1px;
-}
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -650,17 +644,11 @@ video {
 .ml-1 {
   margin-left: 0.25rem;
 }
-.ml-12 {
-  margin-left: 3rem;
-}
 .ml-2 {
   margin-left: 0.5rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
-}
-.ml-4 {
-  margin-left: 1rem;
 }
 .ml-auto {
   margin-left: auto;
@@ -670,9 +658,6 @@ video {
 }
 .mr-3 {
   margin-right: 0.75rem;
-}
-.mr-5 {
-  margin-right: 1.25rem;
 }
 .-mt-2 {
   margin-top: -0.5rem;
@@ -779,9 +764,6 @@ video {
 .h-6 {
   height: 1.5rem;
 }
-.h-8 {
-  height: 2rem;
-}
 .h-9 {
   height: 2.25rem;
 }
@@ -835,9 +817,6 @@ video {
 }
 .w-full {
   width: 100%;
-}
-.max-w-6xl {
-  max-width: 72rem;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -1076,9 +1055,6 @@ video {
 .border-l-4 {
   border-left-width: 4px;
 }
-.border-r {
-  border-right-width: 1px;
-}
 .border-r-0 {
   border-right-width: 0px;
 }
@@ -1100,10 +1076,6 @@ video {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 .border-green-500 {
   --tw-border-opacity: 1;
@@ -1156,9 +1128,8 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(220 220 220 / var(--tw-bg-opacity));
 }
-.bg-\[\#f2f2f2\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+.bg-blue-500\/20 {
+  background-color: rgb(59 130 246 / 0.2);
 }
 .bg-disabled {
   --tw-bg-opacity: 1;
@@ -1184,6 +1155,9 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
+.bg-green-400\/20 {
+  background-color: rgb(74 222 128 / 0.2);
+}
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
@@ -1199,6 +1173,9 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(212 212 212 / var(--tw-bg-opacity));
 }
+.bg-orange-400\/20 {
+  background-color: rgb(251 146 60 / 0.2);
+}
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
@@ -1213,6 +1190,9 @@ video {
 .bg-theme-primary\/10 {
   background-color: rgb(220 53 69 / 0.1);
 }
+.bg-theme-primary\/20 {
+  background-color: rgb(220 53 69 / 0.2);
+}
 .bg-theme-primary\/5 {
   background-color: rgb(220 53 69 / 0.05);
 }
@@ -1223,26 +1203,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-\[\#fbe9eb\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 233 235 / var(--tw-bg-opacity));
-}
-.bg-\[\#fffafa\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 250 250 / var(--tw-bg-opacity));
-}
-.bg-\[\#f6eded\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(246 237 237 / var(--tw-bg-opacity));
-}
-.bg-\[\#f5f5f5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
-}
-.bg-\[\#fffefe\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 254 254 / var(--tw-bg-opacity));
 }
 .fill-current {
   fill: currentColor;
@@ -1380,9 +1340,6 @@ video {
 .pt-6 {
   padding-top: 1.5rem;
 }
-.pt-8 {
-  padding-top: 2rem;
-}
 .text-left {
   text-align: left;
 }
@@ -1452,17 +1409,11 @@ video {
 .leading-5 {
   line-height: 1.25rem;
 }
-.leading-7 {
-  line-height: 1.75rem;
-}
 .leading-tight {
   line-height: 1.25;
 }
 .tracking-tighter {
   letter-spacing: -0.05em;
-}
-.tracking-wider {
-  letter-spacing: 0.05em;
 }
 .tracking-widest {
   letter-spacing: 0.1em;
@@ -1491,17 +1442,13 @@ video {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 .text-gray-400 {
   --tw-text-opacity: 1;
@@ -1542,6 +1489,10 @@ video {
 .text-neutral-400 {
   --tw-text-opacity: 1;
   color: rgb(163 163 163 / var(--tw-text-opacity));
+}
+.text-orange-500 {
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 .text-red-500 {
   --tw-text-opacity: 1;
@@ -2118,6 +2069,13 @@ table td {
 input {
     outline: none !important;
 }
+select {
+    outline: none !important;
+}
+textarea {
+    outline: none !important;
+}
+
 .select2.select2-container {
     width: 100% !important;
 }
@@ -2358,12 +2316,12 @@ input:checked ~ .line {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
-.hover\:bg-white\/20:hover {
-  background-color: rgb(255 255 255 / 0.2);
-}
 .hover\:bg-slate-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+.hover\:bg-white\/20:hover {
+  background-color: rgb(255 255 255 / 0.2);
 }
 .hover\:text-gray-400:hover {
   --tw-text-opacity: 1;
@@ -2889,10 +2847,6 @@ input:checked ~ .line {
 
   .sm\:items-center {
     align-items: center;
-  }
-
-  .sm\:justify-start {
-    justify-content: flex-start;
   }
 
   .sm\:justify-center {
