--- a/public/css/app.css
+++ b/public/css/app.css
@@ -550,6 +550,9 @@ video {
 .-left-1 {
   left: -0.25rem;
 }
+.-left-1\.5 {
+  left: -0.375rem;
+}
 .-top-1 {
   top: -0.25rem;
 }
@@ -626,6 +629,12 @@ video {
 .-mt-2 {
   margin-top: -0.5rem;
 }
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -650,6 +659,9 @@ video {
 .ml-3 {
   margin-left: 0.75rem;
 }
+.ml-4 {
+  margin-left: 1rem;
+}
 .ml-auto {
   margin-left: auto;
 }
@@ -670,6 +682,9 @@ video {
 }
 .mt-1 {
   margin-top: 0.25rem;
+}
+.mt-1\.5 {
+  margin-top: 0.375rem;
 }
 .mt-10 {
   margin-top: 2.5rem;
@@ -764,8 +779,14 @@ video {
 .h-6 {
   height: 1.5rem;
 }
+.h-80 {
+  height: 20rem;
+}
 .h-9 {
   height: 2.25rem;
+}
+.h-\[300px\] {
+  height: 300px;
 }
 .h-\[528px\] {
   height: 528px;
@@ -782,8 +803,14 @@ video {
 .w-10 {
   width: 2.5rem;
 }
+.w-2\/4 {
+  width: 50%;
+}
 .w-20 {
   width: 5rem;
+}
+.w-3 {
+  width: 0.75rem;
 }
 .w-3\/4 {
   width: 75%;
@@ -895,6 +922,9 @@ video {
 }
 .cursor-pointer {
   cursor: pointer;
+}
+.resize-none {
+  resize: none;
 }
 .appearance-none {
   -webkit-appearance: none;
@@ -1051,6 +1081,9 @@ video {
 }
 .border-b-2 {
   border-bottom-width: 2px;
+}
+.border-l {
+  border-left-width: 1px;
 }
 .border-l-4 {
   border-left-width: 4px;
@@ -1408,6 +1441,9 @@ video {
 }
 .leading-5 {
   line-height: 1.25rem;
+}
+.leading-none {
+  line-height: 1;
 }
 .leading-tight {
   line-height: 1.25;
@@ -2320,6 +2356,10 @@ input:checked ~ .line {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
+.hover\:bg-theme-pages:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 249 / var(--tw-bg-opacity));
+}
 .hover\:bg-white\/20:hover {
   background-color: rgb(255 255 255 / 0.2);
 }
@@ -2385,6 +2425,10 @@ input:checked ~ .line {
 .focus\:bg-red-700:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+.focus\:bg-theme-pages:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 249 / var(--tw-bg-opacity));
 }
 .focus\:text-gray-500:focus {
   --tw-text-opacity: 1;
