--- a/public/css/app.css
+++ b/public/css/app.css
@@ -550,6 +550,9 @@ video {
 .-left-1 {
   left: -0.25rem;
 }
+.-left-1\.5 {
+  left: -0.375rem;
+}
 .-top-1 {
   top: -0.25rem;
 }
@@ -632,6 +635,12 @@ video {
 .-mt-px {
   margin-top: -1px;
 }
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -671,9 +680,6 @@ video {
 .mr-3 {
   margin-right: 0.75rem;
 }
-.mr-5 {
-  margin-right: 1.25rem;
-}
 .-mt-2 {
   margin-top: -0.5rem;
 }
@@ -685,6 +691,9 @@ video {
 }
 .mt-1 {
   margin-top: 0.25rem;
+}
+.mt-1\.5 {
+  margin-top: 0.375rem;
 }
 .mt-10 {
   margin-top: 2.5rem;
@@ -706,9 +715,6 @@ video {
 }
 .mt-4 {
   margin-top: 1rem;
-}
-.mt-40 {
-  margin-top: 10rem;
 }
 .mt-5 {
   margin-top: 1.25rem;
@@ -782,8 +788,14 @@ video {
 .h-8 {
   height: 2rem;
 }
+.h-80 {
+  height: 20rem;
+}
 .h-9 {
   height: 2.25rem;
+}
+.h-\[300px\] {
+  height: 300px;
 }
 .h-\[528px\] {
   height: 528px;
@@ -800,8 +812,14 @@ video {
 .w-10 {
   width: 2.5rem;
 }
+.w-2\/4 {
+  width: 50%;
+}
 .w-20 {
   width: 5rem;
+}
+.w-3 {
+  width: 0.75rem;
 }
 .w-3\/4 {
   width: 75%;
@@ -917,6 +935,9 @@ video {
 .cursor-pointer {
   cursor: pointer;
 }
+.resize-none {
+  resize: none;
+}
 .appearance-none {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -924,6 +945,9 @@ video {
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -1073,6 +1097,9 @@ video {
 .border-b-2 {
   border-bottom-width: 2px;
 }
+.border-l {
+  border-left-width: 1px;
+}
 .border-l-4 {
   border-left-width: 4px;
 }
@@ -1156,9 +1183,8 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(220 220 220 / var(--tw-bg-opacity));
 }
-.bg-\[\#f2f2f2\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+.bg-blue-500\/20 {
+  background-color: rgb(59 130 246 / 0.2);
 }
 .bg-disabled {
   --tw-bg-opacity: 1;
@@ -1183,6 +1209,9 @@ video {
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+.bg-green-400\/20 {
+  background-color: rgb(74 222 128 / 0.2);
 }
 .bg-green-500 {
   --tw-bg-opacity: 1;
@@ -1213,6 +1242,9 @@ video {
 .bg-theme-primary\/10 {
   background-color: rgb(220 53 69 / 0.1);
 }
+.bg-theme-primary\/20 {
+  background-color: rgb(220 53 69 / 0.2);
+}
 .bg-theme-primary\/5 {
   background-color: rgb(220 53 69 / 0.05);
 }
@@ -1223,26 +1255,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-\[\#fbe9eb\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 233 235 / var(--tw-bg-opacity));
-}
-.bg-\[\#fffafa\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 250 250 / var(--tw-bg-opacity));
-}
-.bg-\[\#f6eded\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(246 237 237 / var(--tw-bg-opacity));
-}
-.bg-\[\#f5f5f5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
-}
-.bg-\[\#fffefe\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 254 254 / var(--tw-bg-opacity));
 }
 .fill-current {
   fill: currentColor;
@@ -1455,6 +1467,9 @@ video {
 .leading-7 {
   line-height: 1.75rem;
 }
+.leading-none {
+  line-height: 1;
+}
 .leading-tight {
   line-height: 1.25;
 }
@@ -1490,6 +1505,10 @@ video {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 .text-blue-600 {
   --tw-text-opacity: 1;
@@ -2118,6 +2137,13 @@ table td {
 input {
     outline: none !important;
 }
+select {
+    outline: none !important;
+}
+textarea {
+    outline: none !important;
+}
+
 .select2.select2-container {
     width: 100% !important;
 }
@@ -2358,12 +2384,16 @@ input:checked ~ .line {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
-.hover\:bg-white\/20:hover {
-  background-color: rgb(255 255 255 / 0.2);
-}
 .hover\:bg-slate-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+.hover\:bg-theme-pages:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 249 / var(--tw-bg-opacity));
+}
+.hover\:bg-white\/20:hover {
+  background-color: rgb(255 255 255 / 0.2);
 }
 .hover\:text-gray-400:hover {
   --tw-text-opacity: 1;
@@ -2427,6 +2457,10 @@ input:checked ~ .line {
 .focus\:bg-red-700:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+.focus\:bg-theme-pages:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 249 / var(--tw-bg-opacity));
 }
 .focus\:text-gray-500:focus {
   --tw-text-opacity: 1;
@@ -2991,6 +3025,14 @@ input:checked ~ .line {
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
   .lg\:justify-normal {
