--- a/public/css/app.css
+++ b/public/css/app.css
@@ -740,11 +740,8 @@ video {
 .mt-\[4px\] {
   margin-top: 4px;
 }
-.mt-32 {
-  margin-top: 8rem;
-}
-.mt-2\.5 {
-  margin-top: 0.625rem;
+.mt-9 {
+  margin-top: 2.25rem;
 }
 .box-border {
   box-sizing: border-box;
@@ -827,9 +824,6 @@ video {
 .w-10 {
   width: 2.5rem;
 }
-.w-16 {
-  width: 4rem;
-}
 .w-2\/4 {
   width: 50%;
 }
@@ -899,6 +893,9 @@ video {
 .max-w-xl {
   max-width: 36rem;
 }
+.max-w-lg {
+  max-width: 32rem;
+}
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -932,10 +929,6 @@ video {
 }
 .translate-y-4 {
   --tw-translate-y: 1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.rotate-180 {
-  --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-100 {
@@ -1282,6 +1275,30 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-neutral-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 163 163 / var(--tw-bg-opacity));
+}
+.bg-neutral-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+.bg-green-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
+}
+.bg-green-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}
+.bg-red-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+}
 .fill-current {
   fill: currentColor;
 }
@@ -1469,6 +1486,10 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -1628,6 +1649,9 @@ video {
 }
 .accent-theme-primary {
   accent-color: #DC3545;
+}
+.accent-current {
+  accent-color: currentColor;
 }
 .opacity-0 {
   opacity: 0;
@@ -2058,6 +2082,12 @@ body {
 }
 .table-imbal-jasa th {
   border-width: 1px;
+}
+.table-hak-akses td {
+  text-align: left;
+}
+.table-hak-akses th {
+  text-align: left;
 }
 .table-dictionary th {
   text-align: left;
@@ -2563,6 +2593,10 @@ input:checked ~ .line {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
 }
+.focus\:ring-theme-primary:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(220 53 69 / var(--tw-ring-opacity));
+}
 .focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
 }
@@ -3045,20 +3079,16 @@ input:checked ~ .line {
     margin-top: 0.375rem;
   }
 
-  .lg\:mt-\[14vh\] {
-    margin-top: 14vh;
-  }
-
-  .lg\:mt-3 {
-    margin-top: 0.75rem;
-  }
-
   .lg\:mt-2 {
     margin-top: 0.5rem;
   }
 
   .lg\:mt-2\.5 {
     margin-top: 0.625rem;
+  }
+
+  .lg\:mt-\[14vh\] {
+    margin-top: 14vh;
   }
 
   .lg\:block {
@@ -3071,10 +3101,6 @@ input:checked ~ .line {
 
   .lg\:flex {
     display: flex;
-  }
-
-  .lg\:grid {
-    display: grid;
   }
 
   .lg\:hidden {
@@ -3103,6 +3129,14 @@ input:checked ~ .line {
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
   .lg\:justify-normal {
