--- a/public/css/app.css
+++ b/public/css/app.css
@@ -683,6 +683,9 @@ video {
 .mr-3 {
   margin-right: 0.75rem;
 }
+.ms-2 {
+  margin-inline-start: 0.5rem;
+}
 .-mt-2 {
   margin-top: -0.5rem;
 }
@@ -739,12 +742,6 @@ video {
 }
 .mt-\[4px\] {
   margin-top: 4px;
-}
-.mt-32 {
-  margin-top: 8rem;
-}
-.mt-2\.5 {
-  margin-top: 0.625rem;
 }
 .box-border {
   box-sizing: border-box;
@@ -826,9 +823,6 @@ video {
 }
 .w-10 {
   width: 2.5rem;
-}
-.w-16 {
-  width: 4rem;
 }
 .w-2\/4 {
   width: 50%;
@@ -932,10 +926,6 @@ video {
 }
 .translate-y-4 {
   --tw-translate-y: 1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.rotate-180 {
-  --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-100 {
@@ -2555,6 +2545,10 @@ input:checked ~ .line {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.focus\:ring-blue-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
+}
 .focus\:ring-indigo-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
@@ -2757,6 +2751,10 @@ input:checked ~ .line {
     color: rgb(248 113 113 / var(--tw-text-opacity));
   }
 
+  .dark\:ring-offset-gray-800 {
+    --tw-ring-offset-color: #1f2937;
+  }
+
   .dark\:after\:bg-neutral-400::after {
     content: var(--tw-content);
     --tw-bg-opacity: 1;
@@ -2876,6 +2874,11 @@ input:checked ~ .line {
   .dark\:focus\:text-indigo-200:focus {
     --tw-text-opacity: 1;
     color: rgb(199 210 254 / var(--tw-text-opacity));
+  }
+
+  .dark\:focus\:ring-blue-600:focus {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(37 99 235 / var(--tw-ring-opacity));
   }
 
   .dark\:focus\:ring-indigo-600:focus {
@@ -3045,20 +3048,16 @@ input:checked ~ .line {
     margin-top: 0.375rem;
   }
 
-  .lg\:mt-\[14vh\] {
-    margin-top: 14vh;
-  }
-
-  .lg\:mt-3 {
-    margin-top: 0.75rem;
-  }
-
   .lg\:mt-2 {
     margin-top: 0.5rem;
   }
 
   .lg\:mt-2\.5 {
     margin-top: 0.625rem;
+  }
+
+  .lg\:mt-\[14vh\] {
+    margin-top: 14vh;
   }
 
   .lg\:block {
@@ -3071,10 +3070,6 @@ input:checked ~ .line {
 
   .lg\:flex {
     display: flex;
-  }
-
-  .lg\:grid {
-    display: grid;
   }
 
   .lg\:hidden {
