--- a/public/css/app.css
+++ b/public/css/app.css
@@ -671,6 +671,9 @@ video {
 .mr-3 {
   margin-right: 0.75rem;
 }
+.ms-2 {
+  margin-inline-start: 0.5rem;
+}
 .-mt-2 {
   margin-top: -0.5rem;
 }
@@ -800,6 +803,9 @@ video {
 .w-10 {
   width: 2.5rem;
 }
+.w-2\/4 {
+  width: 50%;
+}
 .w-20 {
   width: 5rem;
 }
@@ -896,10 +902,6 @@ video {
 }
 .translate-y-4 {
   --tw-translate-y: 1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.rotate-180 {
-  --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-100 {
@@ -2403,6 +2405,10 @@ input:checked ~ .line {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.focus\:ring-blue-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
+}
 .focus\:ring-indigo-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
@@ -2605,6 +2611,10 @@ input:checked ~ .line {
     color: rgb(248 113 113 / var(--tw-text-opacity));
   }
 
+  .dark\:ring-offset-gray-800 {
+    --tw-ring-offset-color: #1f2937;
+  }
+
   .dark\:after\:bg-neutral-400::after {
     content: var(--tw-content);
     --tw-bg-opacity: 1;
@@ -2724,6 +2734,11 @@ input:checked ~ .line {
   .dark\:focus\:text-indigo-200:focus {
     --tw-text-opacity: 1;
     color: rgb(199 210 254 / var(--tw-text-opacity));
+  }
+
+  .dark\:focus\:ring-blue-600:focus {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(37 99 235 / var(--tw-ring-opacity));
   }
 
   .dark\:focus\:ring-indigo-600:focus {
@@ -2891,6 +2906,14 @@ input:checked ~ .line {
 
   .lg\:mt-1\.5 {
     margin-top: 0.375rem;
+  }
+
+  .lg\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .lg\:mt-2\.5 {
+    margin-top: 0.625rem;
   }
 
   .lg\:mt-\[14vh\] {
